# PROJECT-DRONE

./: LICENSE  README.md  close_container.sh  run_image.sh
Drone_Model/: BLDC_A2212_13T_1000KV_PropCollar.SLDPRT  BLDC_A2212_13T_1000KV_PropNut.SLDPRT  BLDC_A2212_13T_1000KV_PropThread.SLDPRT  First_agrupation.SLDASM  First_drone_body.SLDASM  FlameWheel_F450_Base_Bottom.SLDPRT  FlameWheel_F450_Base_Screw.SLDPRT  FlameWheel_F450_Base_Top.SLDPRT  Motor.SLDPRT  Motor.STL  Motor_1.SLDASM  Motor_2.SLDASM  Motor_base.SLDPRT  Motor_top.SLDPRT  Propeller 10x45.SLDPRT  Turnigy_2200mAh_3S_20C_Lipo_Pack.SLDPRT  Version_final - FlameWheel_F450-1 FlameWheel_F450_Base_Bottom-1.STL  Version_final - FlameWheel_F450-1 FlameWheel_F450_Base_Screw-1.STL  Version_final - FlameWheel_F450-1 FlameWheel_F450_Base_Screw-10.STL  Version_final - FlameWheel_F450-1 FlameWheel_F450_Base_Screw-11.STL  (+48 more)
app/drone_ws/src/drone_controller/: CMakeLists.txt
app/drone_ws/src/drone_controller/include/drone_controller/: LinkControllerNode.h
app/drone_ws/src/drone_controller/msg/: prop_angular_velocity_array_msg.msg  prop_angular_velocity_msg.msg
app/drone_ws/src/drone_controller/src/: LinkControllerNode.cpp  main.cpp
app/drone_ws/src/drone_model/: CMakeLists.txt  package.xml
app/drone_ws/src/drone_model/config/: joint_names_drone_model.yaml
app/drone_ws/src/drone_model/launch/: display.launch  gazebo.launch
app/drone_ws/src/drone_model/meshes/: prop1_link.dae
app/drone_ws/src/drone_model/meshes/collisions/: prop1_link.stl  prop2_link.stl  prop3_link.stl  prop4_link.stl
app/drone_ws/src/drone_model/meshes/visuals/: prop1_link.dae  prop2_link.dae  prop3_link.dae  prop4_link.dae
app/drone_ws/src/drone_model/rviz/: urdf.rviz
app/drone_ws/src/drone_model/urdf/: drone_model.urdf.xacro  drone_model.xacro
(+181 files in other folders)
